12-kubernetes-05-cni/infrastructure/playbooks/network-policy/allow-ingress-tcp-80-443.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
    - Ingress
  ingress:
#    - from:
#      - podSelector:
#          matchLabels:
#            app: frontend
     - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
